--- a/index.html
+++ b/index.html
@@ -30,33 +30,12 @@
           <div class="lotto-list__toggle-container">
             <span class="lotto-list__toggle-description">번호 보기</span>
             <span id="toggle" class="toggle">
-              <input type="checkbox" id="toggle-input" class="lotto-list__toggle-input" checked />
+              <input type="checkbox" id="toggle-input" class="lotto-list__toggle-input" />
               <label class="slider round"></label>
             </span>
           </div>
         </header>
-        <ul id="lotto-lists" class="lotto-lists opened unfold">
-          <li class="lotto-list">
-            <span class="lotto-list__ticket"></span>
-            <span class="lotto-list__numbers">12, 28, 22, 37, 19, 23</span>
-          </li>
-          <li class="lotto-list">
-            <span class="lotto-list__ticket"></span>
-            <span class="lotto-list__numbers">12, 28, 22, 37, 19, 23</span>
-          </li>
-          <li class="lotto-list">
-            <span class="lotto-list__ticket"></span>
-            <span class="lotto-list__numbers">12, 28, 22, 37, 19, 23</span>
-          </li>
-          <li class="lotto-list">
-            <span class="lotto-list__ticket"></span>
-            <span class="lotto-list__numbers">12, 28, 22, 37, 19, 23</span>
-          </li>
-          <li class="lotto-list">
-            <span class="lotto-list__ticket"></span>
-            <span class="lotto-list__numbers">12, 28, 22, 37, 19, 23</span>
-          </li>
-        </ul>
+        <ul id="lotto-lists" class="lotto-lists"></ul>
       </section>
     </div>
     <script type="module" src="./bundle.js"></script>
