--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
             <span class="lotto-list__toggle-description">번호 보기</span>
             <span id="toggle" class="toggle">
               <input type="checkbox" id="toggle-input" class="lotto-list__toggle-input" />
-              <label class="slider round"></label>
+              <label id="slider" class="slider round"></label>
             </span>
           </div>
         </header>
         <ul id="lotto-lists" class="lotto-lists"></ul>
       </section>
     </div>
-    <script type="module" src="./bundle.js"></script>
   </body>
 </html>
