feat: 금액 입력 전, lotto-list-section 숨기기
Co-authored-by: moonheekim0118 <hellomooneekim@gmail.com>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <button class="purchase__submit">구입</button>
         </div>
       </form>
-      <section class="lotto-list__section">
+      <section id="lotto-list-section" class="lotto-list__section lotto-list__section-display-none">
         <header class="lotto-list__header">
           <h4 id="lotto-list-description" class="lotto-list__description"></h4>
           <div class="lotto-list__toggle-container">
